--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1483,7 +1483,7 @@ p {
     color: #333;
     margin-bottom: 1rem;
     font-weight: 700;
-    font-size: 1.25rem;
+    font-size: 1.15rem;
     min-height: 3.5rem;
     display: flex;
     align-items: center;
